--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,5 +32,5 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run script.sh
         run: |
-          chmod +x ./scripts/script.sh
-           ./scripts/script.sh
+          chmod +x ./scripts/convert.sh
+           ./scripts/convert.sh
