--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,6 +10,8 @@ on:
   pull_request:
     branches: [ "main" ]
 
+permissions: write-all
+
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
