--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,6 +13,7 @@ on:
 permissions: write-all
 
   # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -31,13 +32,24 @@ jobs:
         run: echo Hello, world!
 
       # Runs a set of commands using the runners shell
-      - name: Run script.sh
+      - name: Run Generate Java Code
         run: |
-          chmod +x ./scripts/convert.sh
-           ./scripts/convert.sh
+          chmod +x ./scripts/generateCode.sh
+           ./scripts/generateCode.sh
            git config --global user.email "gauravmohan185@live.com"
            git config --global user.name "Gaurav Mohan"
            git status
            git add .
            git commit -m "added generated java code"
+           git push
+
+      - name: Run Generate Java Tests
+        run: |
+          chmod +x ./scripts/generateTests.sh
+           ./scripts/generateTests.sh
+           git config --global user.email "gauravmohan185@live.com"
+           git config --global user.name "Gaurav Mohan"
+           git status
+           git add .
+           git commit -m "added generated java test cases"
            git push
