--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -37,6 +37,7 @@ jobs:
            ./scripts/generateCode.sh
            git config --global user.email "gauravmohan185@live.com"
            git config --global user.name "Gaurav Mohan"
+           git pull
            git status
            git add .
            git commit -m "added generated java code"
@@ -48,6 +49,7 @@ jobs:
            ./scripts/generateTests.sh
            git config --global user.email "gauravmohan185@live.com"
            git config --global user.name "Gaurav Mohan"
+           git pull
            git status
            git add .
            git commit -m "added generated java test cases"
