--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,6 +30,15 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
 
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.12"  # Specify the desired Python version
+
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+
       # Runs a set of commands using the runners shell
       - name: Run Generate Java Code
         run: |
