--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,6 +4,8 @@ name: CI
 
 # Controls when the workflow will run
 on:
+  # On demand trigger
+  workflow_dispatch:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
@@ -34,6 +36,20 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
+
+# Begin java code
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Install Proleap to Local Repo
+        uses: gopinnath/day0-cobol-extractor@0.1d
+        run: mvn install:install-file -Dfile=lib/proleap-cobol-parser-4.0.0.jar
+      - name: Build Application
+        run: mvn install
+# End java code
 
       - name: Run Python Script
         run: python scripts/prompts/ast_prompt.py
