--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -44,9 +44,12 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
-      - name: Install Proleap to Local Repo
+      - name: checkout ast code
         uses: gopinnath/day0-cobol-extractor@0.1d
+
+      - name: Install Proleap to Local Repo
         run: mvn install:install-file -Dfile=lib/proleap-cobol-parser-4.0.0.jar
+      
       - name: Build Application
         run: mvn install
 # End java code
