--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -2,6 +2,9 @@ name: Integrated Pipeline
 
 on:
   workflow_dispatch:
+  push:
+    branches: [ "java-integration" ]
+    
 jobs:
   build:
     runs-on: ubuntu-latest
