--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -25,6 +25,7 @@ jobs:
           
       # Step 3: Checkout AST Generation code
       - name: Checkout Java Code for AST Generation
+        uses: actions/checkout@v4
         with:
           uses: gopinnath/day0-cobol-extractor
       
@@ -35,6 +36,7 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
+          cache-dependency-path: 'day0-cobol-extractor/pom.xml'
           
       # Step 5: Install Proleap to Local repo
       - name: Install Proleap to Local Repo
