Added remote repo

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Checkout Java Code for AST Generation
         uses: actions/checkout@v4
         with:
-          uses: gopinnath/day0-cobol-extractor
+          repository: gopinnath/day0-cobol-extractor
       
       # Step 4: Install JDK
       - name: Set up JDK 17
