--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -27,6 +27,7 @@ jobs:
         with:
           repository: gopinnath/day0-cobol-extractor
           token: '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'
+          path: 'ast-code'
       
       # Step 4: Install JDK
       - name: Set up JDK 17
@@ -35,7 +36,7 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
-          cache-dependency-path: 'day0-cobol-extractor/pom.xml'
+          cache-dependency-path: 'ast-code/day0-cobol-extractor/pom.xml'
           
       # Step 5: Install Proleap to Local repo
       - name: Install Proleap to Local Repo
