--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -43,3 +43,7 @@ jobs:
       # Step 6: Install Proleap to Local repo
       - name: Build Application
         run: mvn install
+        
+      # Step 7: Generate AST From COBOL 
+      - name: Build Application
+        run: mvn -Dsource.file=src/main/cobol/addnumbers.cobol -Dtarget.directory=target/ -Dast.style=asis exec:java        
