--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -54,7 +54,12 @@ jobs:
         with:
           repository: gauravmohan185/legacymodernization
 
-      # Step 9: Execute Prompt
+      # Step 9: Install Python for Python
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          
+      # Step 10: Execute Prompt
       - name: Run Python Script
         run: python scripts/prompts/ast_prompt.py
 
