--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -54,6 +54,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install langchain
+          python -m pip install langchain_community
           
       # Step 9: Execute Prompt
       - name: Run Python Script
